--- a/Publications.html
+++ b/Publications.html
@@ -9,6 +9,24 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Azogagh Sofiane</title>
+  <style>
+    .fa-file-pdf {
+      background: linear-gradient(45deg, #ff0000 0%, #ff0000 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    }
+  </style>
+  <style>
+    .fa-github {
+      background: linear-gradient(45deg, #171515 0%, #000000 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    }
+  </style>
 </head>
 
 <body>
@@ -65,9 +83,9 @@
             and its application to private k-NN</h4>
           <div class="paper-links">
             <a href="https://eprint.iacr.org/2024/1894.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <!-- <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a> -->
             <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
                 class="fa-solid fa-quote-right"></i></a>
-            <!-- <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a> -->
           </div>
         </div>
         <p style="font-size: 0.9em">Under review with M-O. Killijian and F. Larose-Gervais</p>
@@ -79,8 +97,8 @@
           <h4 style="font-size: 1.1em">RevoLUT : Rust Efficient Versatile Oblivious Look-Up-Tables</h4>
           <div class="paper-links">
             <a href="https://eprint.iacr.org/2024/1935.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-            <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
             <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a>
+            <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
         <p style="font-size: 0.9em">Under review with Z. A. Birba, M-O. Killijian and F. Larose-Gervais</p>
@@ -95,10 +113,10 @@
             Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</h4>
           <div class="paper-links">
             <a href="https://arxiv.org/pdf/2309.10890v1.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-            <a href="#" onclick="showBibtex('bibtexCryptoGraph')" title="BibTeX"><i
-                class="fa-solid fa-quote-right"></i></a>
             <a href="https://github.com/birbaubin/distributed-link-prediction" title="GitHub"><i
                 class="fa-brands fa-github"></i></a>
+            <a href="#" onclick="showBibtex('bibtexCryptoGraph')" title="BibTeX"><i
+                class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
         <p style="font-size: 0.9em">CODASPY 2024 : <a href="https://codaspy2024.org/">The 14th ACM Conference on Data
@@ -112,9 +130,9 @@
           <h4 style="font-size: 1.1em">Oblivious Turing Machine</h4>
           <div class="paper-links">
             <a href="https://eprint.iacr.org/2023/1643.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-            <a href="#" onclick="showBibtex('bibtexOTM')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
             <a href="https://github.com/sofianeazogagh/ObliviousTM" title="GitHub"><i
                 class="fa-brands fa-github"></i></a>
+            <a href="#" onclick="showBibtex('bibtexOTM')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
         <p style="font-size: 0.9em">EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th
@@ -131,9 +149,9 @@
           <div class="paper-links">
             <a href="https://dl.acm.org/doi/10.1145/3560827.3563377" title="PDF"><i
                 class="fa-solid fa-file-pdf"></i></a>
+            <a href="https://github.com/sofianeazogagh/PROBONITE" title="GitHub"><i class="fa-brands fa-github"></i></a>
             <a href="#" onclick="showBibtex('bibtexPROBONITE')" title="BibTeX"><i
                 class="fa-solid fa-quote-right"></i></a>
-            <a href="https://github.com/sofianeazogagh/PROBONITE" title="GitHub"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
         <p style="font-size: 0.9em">WAHC 2022 : <a href="https://homomorphicencryption.org/workshops/wahc22/"> The 10th
