reduce the font in teaching

--- a/Teaching.html
+++ b/Teaching.html
@@ -58,14 +58,14 @@
     <div class="main-content">
       <h1>Teaching</h1>
       <hr>
-      <h3>2023-2024 : Lecturer (Université du Québec à Montréal)</h3>
+      <h3 style="font-size: 1.1em">2023-2024 : Lecturer (Université du Québec à Montréal)</h3>
       <ul>
         <li> Undergraduate courses, Department of Computer Science</li>
         <ul>
           <li>Mathematics for computer science <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
         </ul>
       </ul>
-      <h3>2022-2023 : Teaching Assistant (Université du Québec à Montréal)</h3>
+      <h3 style="font-size: 1.1em">2022-2023 : Teaching Assistant (Université du Québec à Montréal)</h3>
       <ul>
         <li> Undergraduate courses, Department of Computer Science</li>
         <ul>
@@ -82,7 +82,7 @@
               href="https://etudier.uqam.ca/cours?sigle=MAT0341">(MAT0341)</a></li>
         </ul>
       </ul>
-      <h3>2021-2022 : Teaching Assistant (Université du Québec à Montréal)</h3>
+      <h3 style="font-size: 1.1em">2021-2022 : Teaching Assistant (Université du Québec à Montréal)</h3>
       <ul>
         <li> Undergraduate courses, Department of Computer Science</li>
         <ul>
