--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Blog Posts.html">Blog Posts</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="Contact.html">Contact</a>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -52,9 +49,12 @@
             <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
             <nav class="side_bar_links">
                 <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
-                <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
+                <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/">
+                    Linkedin</a> <br>
                 <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
                 <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
+                <i class="fa-solid fa-graduation-cap"> </i> <a
+                    href="https://scholar.google.com/citations?user=RV_HmsEAAAAJ&hl=fr"> Google Scholar</a> <br>
             </nav>
         </div>
 
@@ -63,18 +63,18 @@
             <h1>Homepage</h1>
             <hr>
 
-            <p>I am currently a PhD Student at the Université du Québec à Montréal under 
+            <p>I am currently a PhD Student at the Université du Québec à Montréal under
                 the supervision of <a href="https://kirija.github.io"> Marc-Olivier Killijian</a>
                 and <a href="https://sebastiengambs.openum.ca/team/"> Sébastien Gambs</a>.
-                My research is on the intersection of Cryptography and Machine Learning. 
+                My research is on the intersection of Cryptography and Machine Learning.
                 In particular, I delve into the innovative application of Homomorphic Encryption techniques
-                to enhance data privacy within the realm of machine learning. This type of encryption enables 
-                the processing of data in an encrypted form, allowing computations to be performed on the 
-                encrypted data without the need for decryption. This revolutionary capability preserves the privacy 
+                to enhance data privacy within the realm of machine learning. This type of encryption enables
+                the processing of data in an encrypted form, allowing computations to be performed on the
+                encrypted data without the need for decryption. This revolutionary capability preserves the privacy
                 and security of sensitive information throughout the entire computational process.
-                </p>
+            </p>
 
-                
+
 
             <!-- Paginations -->
             <!-- <div class="pagination_section">
@@ -90,13 +90,13 @@
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3">
-          <span id="currentYear"></span> - Azogagh Sofiane
+            <span id="currentYear"></span> - Azogagh Sofiane
         </div>
-      </footer>
-      
-      <script>
+    </footer>
+
+    <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
-      </script>
+    </script>
 
 
     <!-- Scripts -->
