--- a/Blog Posts.html
+++ b/Blog Posts.html
@@ -45,39 +45,13 @@
 
   </header>
   <main>
-    <div class="side-bar-left">
-      <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
-      <nav class="side_bar_links">
-          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
-          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
-          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
-          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
-      </nav>
-  </div>
     <div class="main-content">
       <h1>Blog Posts</h1>
       <hr>
       <div class="posts">
         <h3>Post</h3>
         <p>Currently in construction.</p>
-        <!-- <h3>Post 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium corrupti nostrum placeat libero
-          cumque saepe veritatis fugit? Unde, incidunt maiores veritatis voluptate eum hic sit natus obcaecati eveniet,
-          enim fugit rem? Tempora corporis ratione modi perspiciatis impedit necessitatibus autem facilis deleniti vel
-          commodi adipisci incidunt veniam maxime fugiat quia voluptatem amet, quos earum sapiente distinctio sed
-          itaque? Vero, odio?</p> -->
-        <!-- <h3>Post 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium corrupti nostrum placeat libero
-          cumque saepe veritatis fugit? Unde, incidunt maiores veritatis voluptate eum hic sit natus obcaecati eveniet,
-          enim fugit rem? Tempora corporis ratione modi perspiciatis impedit necessitatibus autem facilis deleniti vel
-          commodi adipisci incidunt veniam maxime fugiat quia voluptatem amet, quos earum sapiente distinctio sed
-          itaque? Vero, odio?</p> -->
       </div>
-      <!-- Paginations -->
-      <!-- <div class="pagination_section">
-        <a href="/Blog Posts/Blog Posts.html" title="Title1">1</a>
-        <a href="/Blog Posts/Blog Posts2.html" title="Title2">2</a>
-      </div> -->
     </div>
   </main>
 
@@ -96,7 +70,7 @@
       <span id="currentYear"></span> - Azogagh Sofiane
     </div>
   </footer>
-  
+
   <script>
     document.getElementById('currentYear').textContent = new Date().getFullYear();
   </script>
@@ -106,6 +80,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
     integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
     crossorigin="anonymous"></script>
+
+  <script>
+    fetch('sidebar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.querySelector('main').insertAdjacentHTML('afterbegin', data);
+      });
+  </script>
 </body>
 
 </html>
