--- a/Teaching.html
+++ b/Teaching.html
@@ -45,16 +45,6 @@
 
   </header>
   <main>
-    <div class="side-bar-left">
-      <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
-      <nav class="side_bar_links">
-        <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
-        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/">
-          Linkedin</a> <br>
-        <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
-        <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
-      </nav>
-    </div>
     <div class="main-content">
       <h1>Teaching</h1>
       <hr>
@@ -122,6 +112,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
     integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
     crossorigin="anonymous"></script>
+
+  <script>
+    fetch('sidebar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.querySelector('main').insertAdjacentHTML('afterbegin', data);
+      });
+  </script>
 </body>
 
 </html>
