--- a/index.html
+++ b/index.html
@@ -44,19 +44,22 @@
     <main>
 
         <!-- Sidebar -->
-
+        <!-- 
         <div class="side-bar-left">
             <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
-            <nav class="side_bar_links">
-                <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
-                <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/">
+            <nav class="side_bar_links" style="font-size: 1.5em;">
+                <i class="fa-solid fa-location-dot" style="color: #e32f26;"></i> Montréal, CA<br>
+                <i class="fa-brands fa-linkedin" style="color: #0077B5;"></i> <a
+                    href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/">
                     Linkedin</a> <br>
-                <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
-                <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
-                <i class="fa-solid fa-graduation-cap"> </i> <a
-                    href="https://scholar.google.com/citations?user=RV_HmsEAAAAJ&hl=fr"> Google Scholar</a> <br>
+                <i class="fa-solid fa-envelope"></i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+                <i class="fa-brands fa-github" style="color: #171515;"></i> <a
+                    href="https://github.com/sofianeazogagh">Github</a> <br>
+                <i class="fa-solid fa-graduation-cap"
+                    style="background: linear-gradient(135deg, #4285F4, #DB4437, #F4B400, #0F9D58); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i><a
+                    href="https://scholar.google.com/citations?user=RV_HmsEAAAAJ&hl=fr">Google Scholar</a> <br>
             </nav>
-        </div>
+        </div> -->
 
 
         <div class="main-content">
@@ -104,6 +107,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
         integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
         crossorigin="anonymous"></script>
+
+    <script>
+        fetch('sidebar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.querySelector('main').insertAdjacentHTML('afterbegin', data);
+            });
+    </script>
 </body>
 
 </html>
