--- a/Publications.html
+++ b/Publications.html
@@ -126,7 +126,8 @@
           </div>
         </div>
         <p style="font-size: 0.9em">EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th
-            European Dependable Computing Conference</a> with V. Defour, and M-O. Killijian (distinguished paper award)
+            European Dependable Computing Conference</a> with V. Defour, and M-O. Killijian (distinguished paper award
+          <i class="fa-solid fa-award" style="color: #1c9713;"></i> )
         </p>
       </div>
 
