--- a/Publications.html
+++ b/Publications.html
@@ -94,7 +94,19 @@
         <p style="font-size: 0.9em">Under review with Z. A. Birba, M-O. Killijian and F. Larose-Gervais</p>
       </div>
 
-
+      <!-- GRAND -->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em">GRAND : Graph Reconstruction from potential partial Adjacency and Neighborhood
+            Data</h4>
+          <div class="paper-links">
+            <a href="https://arxiv.org/pdf/2412.02329.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="#" onclick="showBibtex('bibtexGRAND')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
+          </div>
+        </div>
+        <p style="font-size: 0.9em">Under review with Z. A. Birba, J. Desharnais, M-O. Killijian, S. Gambs and N. Tawbi
+        </p>
+      </div>
 
       <!-- Crypto'Graph -->
       <div class="publication-entry">
@@ -268,6 +280,26 @@
           }
       </code></pre>
         <button class="copy-button" onclick="copyBibtex('bibtexRevoLUT')">Copy to Clipboard</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="bibtexGRAND" class="bibtex-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>BibTeX Citation</h5>
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <pre><code>
+          @article{azogagh2024grand,
+            title={GRAND: Graph Reconstruction from potential partial Adjacency and Neighborhood Data},
+            author={Azogagh, Sofiane and Birba, Zelma Aubin and Desharnais, Jos{\'e}e and Killijian, Marc-Olivier and Gambs, S{\'e}bastien and Tawbi, Nadia},
+            journal={arXiv preprint arXiv:2412.02329},
+            year={2024}
+          }
+      </code></pre>
+        <button class="copy-button" onclick="copyBibtex('bibtexGRAND')">Copy to Clipboard</button>
       </div>
     </div>
   </div>
