--- a/sidebar.html
+++ b/sidebar.html
@@ -8,8 +8,10 @@
         <i class="fa-solid fa-envelope"></i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
         <i class="fa-brands fa-github" style="color: #171515;"></i> <a
             href="https://github.com/sofianeazogagh">Github</a> <br>
-        <i class="fa-solid fa-graduation-cap"
-            style="background: linear-gradient(135deg, #4285F4, #DB4437, #F4B400, #0F9D58); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i><a
+        <i class="fa-solid fa-graduation-cap" style="background: linear-gradient(135deg, #275eb8, #f3efef); 
+            background-clip: text;
+            -webkit-background-clip: text; 
+            -webkit-text-fill-color: transparent;"></i><a
             href="https://scholar.google.com/citations?user=RV_HmsEAAAAJ&hl=fr">Google Scholar</a> <br>
     </nav>
 </div>
