--- a/Publications.html
+++ b/Publications.html
@@ -108,6 +108,18 @@
         </p>
       </div>
 
+      <!-- Poppy-->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em"> Privacy-Preserving Distributed Spectral Centrality Measures based on Fully
+            Homomorphic Encryption (Short Paper)</h4>
+        </div>
+        <p style="font-size: 0.9em">BDA 2024 :<a href="https://bda2024.sciencesconf.org"> The 40th Conference on Data
+            Management – Principles, Technologies, and Applications</a> with C. Guichemerre, T. Allard, S. Gambs, M-O.
+          Killijian and A. El Abbadi
+        </p>
+      </div>
+
       <!-- Crypto'Graph -->
       <div class="publication-entry">
         <div class="publication-header">
