update knn paper

--- a/Publications.html
+++ b/Publications.html
@@ -73,12 +73,11 @@
             and its application to private k-NN</h4>
           <div class="paper-links">
             <a href="https://eprint.iacr.org/2024/1894.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-            <!-- <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a> -->
             <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
                 class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
-        <p style="font-size: 0.9em">Under review with M-O. Killijian and F. Larose-Gervais</p>
+        <p style="font-size: 0.9em">Accepted at PETS 2025 with M-O. Killijian and F. Larose-Gervais</p>
       </div>
 
       <!-- RevoLUT -->
@@ -91,7 +90,8 @@
             <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
-        <p style="font-size: 0.9em">Under review with Z. A. Birba, M-O. Killijian and F. Larose-Gervais</p>
+        <p style="font-size: 0.9em">Accepted as a poster at FHE.org 2025 with Z. A. Birba, M-O. Killijian and F.
+          Larose-Gervais</p>
       </div>
 
       <!-- GRAND -->
