--- a/Publications.html
+++ b/Publications.html
@@ -75,6 +75,7 @@
             <a href="https://eprint.iacr.org/2024/1894.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
             <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
                 class="fa-solid fa-quote-right"></i></a>
+            <a href="https://github.com/sofianeazogagh/knn" title="GitHub"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
         <p style="font-size: 0.9em">Accepted at PETS 2025 with M-O. Killijian and F. Larose-Gervais</p>
