add seb in revolut

--- a/Publications.html
+++ b/Publications.html
@@ -91,7 +91,8 @@
             <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
-        <p style="font-size: 0.9em">Accepted as a poster at FHE.org 2025 with Z. A. Birba, M-O. Killijian and F.
+        <p style="font-size: 0.9em">Accepted as a poster at FHE.org 2025 with Z. A. Birba, S. Gambs, M-O. Killijian and
+          F.
           Larose-Gervais</p>
       </div>
 
