blind sort update

--- a/Publications.html
+++ b/Publications.html
@@ -72,13 +72,15 @@
           <h4 style="font-size: 1.1em"> A non-comparison oblivious sort
             and its application to private k-NN</h4>
           <div class="paper-links">
-            <a href="https://eprint.iacr.org/2024/1894.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="https://petsymposium.org/popets/2025/popets-2025-0093.pdf" title="PDF"><i
+                class="fa-solid fa-file-pdf"></i></a>
             <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
                 class="fa-solid fa-quote-right"></i></a>
             <a href="https://github.com/sofianeazogagh/knn" title="GitHub"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
-        <p style="font-size: 0.9em">Accepted at PETS 2025 with M-O. Killijian and F. Larose-Gervais</p>
+        <p style="font-size: 0.9em">Proceedings on Privacy Enhancing Technologies 2025 with M-O. Killijian and F.
+          Larose-Gervais</p>
       </div>
 
       <!-- RevoLUT -->
@@ -106,7 +108,8 @@
             <a href="#" onclick="showBibtex('bibtexGRAND')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
           </div>
         </div>
-        <p style="font-size: 0.9em">Under review with Z. A. Birba, J. Desharnais, M-O. Killijian, S. Gambs and N. Tawbi
+        <p style="font-size: 0.9em">Accepted at KDD 2025 with Z. A. Birba, J. Desharnais, M-O. Killijian, S. Gambs and
+          N. Tawbi
         </p>
       </div>
 
