--- a/index.html
+++ b/index.html
@@ -432,8 +432,21 @@
                 <h1>Talks</h1>
                 <hr>
                 <div class="posts">
-                    <!-- <h3>Post</h3> -->
-                    <p>Currently in construction.</p>
+                    <h3 style="font-size: 1.1em">A non-comparison oblivious sort and its application to private k-NN
+                    </h3>
+                    <p><a href="./slides/Blind_Sort_PETs.pdf" title="PDF">Slides presented at
+                            PETS 2025, SosySec 2025 and APVP 2025 <i class="fa-solid fa-file-pdf"></i></a></p>
+                </div>
+                <div class="posts">
+                    <h3 style="font-size: 1.1em">RevoLUT : Rust Efficient Versatile Oblivious Look-Up-Tables</h3>
+                    <p><a href="./slides/RevoLUT_APVP_25.pdf" title="PDF">Slides presented at
+                            APVP 2025 and Forum MobiliT.AI 2024 <i class="fa-solid fa-file-pdf"></i></a></p>
+                </div>
+                <div class="posts">
+                    <h3 style="font-size: 1.1em">PROBONITE : Private One-Branch-Only Non-Interactive decision Tree
+                        Evaluation</h3>
+                    <p><a href="./slides/PROBONITE_WAHC.pdf" title="PDF">Slides presented at
+                            WAHC 2022 <i class="fa-solid fa-file-pdf"></i></a></p>
                 </div>
             </div>
 
