--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
             <div class="section" id="publications">
                 <h1>Publications</h1>
                 <hr>
+                <!-- OXT -->
+                <div class="publication-entry">
+                    <div class="publication-header">
+                        <h4 style="font-size: 1.1em">Oblivious (Un)Learning of Extremely Randomized Trees</h4>
+                        <div class="paper-links">
+                            <a href="./Oblivious_Extremely_Randomized_Trees.pdf" title="PDF"><i
+                                    class="fa-solid fa-file-pdf"></i></a>
+                        </div>
+                        <!-- <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
+                                    class="fa-solid fa-quote-right"></i></a> -->
+                        <!-- <a href="https://github.com/sofianeazogagh/knn" title="GitHub"><i
+                                    class="fa-brands fa-github"></i></a> -->
+                    </div>
+                    <p style="font-size: 0.9em">Under review with Z. A. Birba, S. Gambs and M-O. Killijian</p>
+                </div>
+
                 <!-- Blind Sort -->
                 <div class="publication-entry">
                     <div class="publication-header">
