update link oxt

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="publication-header">
                         <h4 style="font-size: 1.1em">Oblivious (Un)Learning of Extremely Randomized Trees</h4>
                         <div class="paper-links">
-                            <a href="./Oblivious_Extremely_Randomized_Trees.pdf" title="PDF"><i
+                            <a href="https://eprint.iacr.org/2025/1409.pdf" title="PDF"><i
                                     class="fa-solid fa-file-pdf"></i></a>
                         </div>
                         <!-- <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
