--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                     <ul>
                         <li><a href="./slides/RevoLUT_APVP_25.pdf" title="PDF">Slides presented at APVP 2025 and Forum
                                 MobiliT.AI 2024 <i class="fa-solid fa-file-pdf"></i></a></li>
-                        <li><a href="./posters/Poster_FHE25.pdf" title="PDF">Poster presented at FHE.org 2025 <i
+                        <li><a href="./posters/Poster_FHE25_RevoLUT.pdf" title="PDF">Poster presented at FHE.org 2025 <i
                                     class="fa-solid fa-file-pdf"></i></a></li>
                     </ul>
                 </div>
